[tool.poetry]
name = "nedrexapi"
version = "0.1.0"
description = ""
authors = ["james-skelton <james.skelton@newcastle.ac.uk>","andreas-maier <andreas.maier-1@uni-hamburg.de>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.15.0"
cachetools = "^4.2.4"
bicon = "^1.3.2"
click = "^8.0.3"
neo4j = "^4.3.7"
python-multipart = "^0.0.7"
requests = "^2.32.0"
filelock = "^3.3.2"
redis = "^4.3.6"
pottery = "^2.2.2"
gseapy = "^0.10.7"
gunicorn = "^22.0.0"
slowapi = "^0.1.6"
toml = "^0.10.2"
pymongo = "^4.6.2"
loguru = "^0.6.0"
rq = "^1.11.0"
more-itertools = "^8.14.0"
py2neo = "^2021.2.4"
docker = "^6.0.0"
pillow = "^10.3.0"
py = "^1.11.0"
starlette = "^0.36.1"
dnspython = "^2.6.0"
idna = "^3.7"
tqdm = "^4.66.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["nedrexapi"]
