[tool.poetry]
name = "nedrexapi"
version = "0.3.0"
description = ""
authors = ["james-skelton <james.skelton@newcastle.ac.uk>","andreas-maier <andreas.maier-1@uni-hamburg.de>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
uvicorn = "^0.15.0"
cachetools = "^4.2.4"
bicon = "^1.3.2"
click = "^8.0.3"
neo4j = "^5.28.1"
python-multipart = "^0.0.19"
requests = "^2.32.4"
filelock = "^3.3.2"
redis = "^4.3.6"
pottery = "^2.2.2"
gseapy = "^0.10.7"
gunicorn = "^23.0.0"
slowapi = "^0.1.6"
toml = "^0.10.2"
pymongo = "^4.6.2"
loguru = "^0.6.0"
rq = "^1.11.0"
more-itertools = "^8.14.0"
py2neo = "^2021.2.4"
docker = "7.1.0"
pillow = "^10.3.0"
starlette = "^0.47.2"
dnspython = "^2.6.0"
idna = "^3.7"
tqdm = "^4.66.3"
zipp = "^3.19.1"
urllib3 = "^2.5.0"
certifi = "^2024.07.04"
numpy = "^2.1.0"
langchain-community = "^0.3.27"
langchain = "^0.3.14"
langchain-neo4j = "^0.4.0"
langchain-ollama = "^0.2.2"
aiohttp = "^3.12.14"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["nedrexapi"]
